--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" href="stylesheets/pygment_trac.css" media="screen" />
     <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print" />
 
-    <title>Website by basecode</title>
+    <title>basecode.de</title>
   </head>
 
   <body>
@@ -16,7 +16,7 @@
     <header>
       <div class="container">
         <h1>Website</h1>
-        <h2>My personal website</h2>
+        <h2>/^Start with basecode/i</h2>
       </div>
     </header>
 
