--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <header>
       <div class="container">
-        <h1>Website</h1>
+        <h1>website.html</h1>
         <h2>/^Start with basecode/i</h2>
       </div>
     </header>
