--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
     <div class="container">
       <section id="main_content">
         <h3>Test</h3>
+        <p>
+          A nice text.
+        </p>
       </section>
     </div>
 
