--- a/index.html
+++ b/index.html
@@ -15,7 +15,12 @@
 
     <header>
       <div class="container">
-        <h1>~basecode</h1>
+        <h1>~basecode
+          <span>
+            <a href="http://www.github.com/basecode">Github</a>,
+            <a href="http://www.twitter.com/basecode">Twitter</a>
+          </span>
+        </h1>
       </div>
     </header>
 
