change tdd headline

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <p>
           In 2008 I decided to go more low-level and started learning C and <a href="https://en.wikipedia.org/wiki/Objective-C">Obj-C</a>. Together with <a href="http://www.madamelerenoir.com/">MadameLeRenoir</a>, we created the following <a href="http://itunes.com/madamelerenoir">list</a> of iOS apps so far. Among other APIs I got familiar with <a href="http://developer.apple.com/library/ios/#documentation/CoreGraphics/Reference/CoreGraphics_Framework/_index.html">Core Graphics</a> and <a href="https://developer.apple.com/library/mac/#documentation/Cocoa/Conceptual/CoreAnimation_guide/Introduction/Introduction.html">Core Animation</a>.
         </p>
-        <h3>Test-driven development (TDD)</h3>
+        <h3>I'm a TDD coach</h3>
         <p>
           I had the chance to learn from one of the best and since then consider untested code as worthless in the log-term. Writing tests makes you sleep better and completely removes those moments of "I'm afraid of touching the code". As a side effect following the rules of TDD will heavily influence the way you code in a good sense.  Since 2012 I offer TDD coaching as part of my job at Uxebu.
         </p>
