--- a/index.html
+++ b/index.html
@@ -48,16 +48,7 @@
       </div>
     </footer>
 
-    <script type="text/javascript">
-      var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-      document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-    </script>
-    <script type="text/javascript">
-      try {
-        var pageTracker = _gat._getTracker("UA-39978115-1");
-        pageTracker._trackPageview();
-      } catch(err) {}
-    </script>
+    <script type="text/javascript" src="javascripts/main.js"></script>
 
   </body>
 </html>
