--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
 
-    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen" />
+    <link rel="stylesheet" type="text/css" href="stylesheet/stylesheet.css" media="screen" />
 
     <title>basecode.de</title>
   </head>
@@ -48,7 +48,7 @@
       </div>
     </footer>
 
-    <script type="text/javascript" src="javascripts/main.js"></script>
+    <script type="text/javascript" src="javascript/main.js"></script>
 
   </body>
 </html>
