Make header clickable

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 
     <header>
       <div class="container">
-        <h1>~basecode
+        <h1>
+          <a href="">~basecode</a>
           <span>
             <a href="http://www.github.com/basecode">Github</a>,
             <a href="http://www.twitter.com/basecode">Twitter</a>
