Add "hw accel drop shadow anim with CSS" link and page

--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
     </header>
 
     <div class="container">
+      <h3>Article</h3>
+      <ul>
+        <li><a href="./article/hardware-accelerated-drop-shadow-animation-with-css.html">Hardware accelerated drop-shadow animation with CSS</a></li>
+      </ul>
       <h3>I'm a Web Developer</h3>
       <p>
         Having grown up with the Web 1.0 I used to work with PHP, SQL and JavaScript in the early days. I joined a small start-up in 2001 which was mainly focused on collecting financial data. I was responsible for visualizing that data in terms of creating self-statement charts, factsheets and simple tools whereby I learned a lot about <a href="http://en.wikipedia.org/wiki/XSL_Formatting_Objects">XSL-FO</a>, <a href="https://en.wikipedia.org/wiki/Scalable_Vector_Graphics">SVG</a> and <a href="http://raphaeljs.com/">Raphaël</a>.
