--- a/article/hardware-accelerated-drop-shadow-animation-with-css.html
+++ b/article/hardware-accelerated-drop-shadow-animation-with-css.html
@@ -15,7 +15,7 @@
     <header>
       <div class="container">
         <h1>
-          <a href="">~basecode</a>
+          <a href="../index.html">~basecode</a>
           <span>
             <a href="http://www.github.com/basecode">Github</a>,
             <a href="http://www.twitter.com/basecode">Twitter</a>
@@ -24,15 +24,18 @@
       </div>
     </header>
 
-    <div class="container">
+    <section class="headline">
+      <div class="container">
+        <h2>Hardware accelerated drop-shadow animation with CSS</h2>
+      </div>
+    </section>
 
-      <h2>Hardware accelerated drop-shadow animation with CSS</h2>
-
-      <h3>some other random text</h3>
-
-      <p>asdaskdal and even more text</p>
-
-    </div>
+    <section class="content">
+      <div class="container">
+        <h3>some other random text</h3>
+        <p>asdaskdal and even more text</p>
+      </div>
+    </section>
 
     <footer>
       <div class="container">
