--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
         <h1>
           <a href="">~basecode</a>
           <span>
-            <a href="http://www.github.com/basecode" rel="me">Github</a>,
-            <a href="http://www.twitter.com/basecode" rel="me">Twitter</a>
+            <a href="https://www.github.com/basecode" rel="me">Github</a>,
+            <a href="https://www.twitter.com/basecode" rel="me">Twitter</a>
           </span>
         </h1>
       </div>
