Add h-card stuff

--- a/index.html
+++ b/index.html
@@ -44,7 +44,12 @@
 
     <footer>
       <div class="container">
-        <p>Tobias Reiss, &copy; 2013 - today</p>
+        <p class="h-card">
+          <span class="p-name">Tobias Reiss</a>,
+          @<span class="p-nickname">basecode</span>,
+          <span class="u-url">http://basecode.de/</span>
+          &copy; 2013 - today
+        </p>
       </div>
     </footer>
 
