--- a/index.html
+++ b/index.html
@@ -45,9 +45,11 @@
     <footer>
       <div class="container">
         <p class="h-card">
-          <span class="p-name">Tobias Reiss</a>,
-          @<span class="p-nickname">basecode</span>,
+          <span class="p-name">Tobias Reiss</span>
+          <span class="p-nickname">basecode</span>
           <span class="u-url">http://basecode.de/</span>
+          <span class="p-note">tdd, graphics and javascript enthusiast working @uxebu and making iOS apps with @madamelerenoir.</span>
+          <img class="u-photo" src="https://pbs.twimg.com/profile_images/2112023631/icon_head_tob.png" />
           &copy; 2013 - today
         </p>
       </div>
