Add h-entry stuff

--- a/index.html
+++ b/index.html
@@ -24,22 +24,25 @@
       </div>
     </header>
 
-    <div class="container">
-      <h3>I'm a Web Developer</h3>
-      <p>
-        Having grown up with the Web 1.0 I used to work with PHP, SQL and JavaScript in the early days. I joined a small start-up in 2001 which was mainly focused on collecting financial data. I was responsible for visualizing that data in terms of creating self-statement charts, factsheets and simple tools whereby I learned a lot about <a href="http://en.wikipedia.org/wiki/XSL_Formatting_Objects">XSL-FO</a>, <a href="https://en.wikipedia.org/wiki/Scalable_Vector_Graphics">SVG</a> and <a href="http://raphaeljs.com/">Raphaël</a>.
-      </p>
-      <p>
-        In October 2011 I joined <a href="http://www.uxebu.com/">uxebu</a>, a start-up that lets me work with cutting edge tools, technologies and APIs. I became a JavaScript expert, core contributor of a fantastic graphics library, called <a href="http://bonsaijs.org/">BonsaiJS</a> and a <a href="http://www.pixelplant.com/">Flash whisperer</a>. They support and encourage me attending and speaking at <a href="http://lanyrd.com/profile/basecode/">conferences</a>.
-      </p>
-      <h3>I'm an iOS Developer</h3>
-      <p>
-        In 2008 I decided to go more low-level and started learning C and <a href="https://en.wikipedia.org/wiki/Objective-C">Obj-C</a>. Together with <a href="http://www.madamelerenoir.com/">MadameLeRenoir</a>, we created the following <a href="http://itunes.com/madamelerenoir">list</a> of iOS apps so far. Among other APIs I got familiar with <a href="http://developer.apple.com/library/ios/#documentation/CoreGraphics/Reference/CoreGraphics_Framework/_index.html">Core Graphics</a> and <a href="https://developer.apple.com/library/mac/#documentation/Cocoa/Conceptual/CoreAnimation_guide/Introduction/Introduction.html">Core Animation</a>.
-      </p>
-      <h3>I'm a TDD coach</h3>
-      <p>
-        I had the chance to learn from one of the best and since then consider untested code as worthless in the log-term. Writing tests makes you sleep better and completely removes those moments of "I'm afraid of touching the code". As a side effect following the rules of TDD will heavily influence the way you code in a good sense.  Since 2012 I offer TDD coaching as part of my job at Uxebu.
-      </p>
+    <div class="container h-entry">
+      <span class="p-name">About me</span>
+      <article class="e-content">
+        <h3>I'm a Web Developer</h3>
+        <p>
+          Having grown up with the Web 1.0 I used to work with PHP, SQL and JavaScript in the early days. I joined a small start-up in 2001 which was mainly focused on collecting financial data. I was responsible for visualizing that data in terms of creating self-statement charts, factsheets and simple tools whereby I learned a lot about <a href="http://en.wikipedia.org/wiki/XSL_Formatting_Objects">XSL-FO</a>, <a href="https://en.wikipedia.org/wiki/Scalable_Vector_Graphics">SVG</a> and <a href="http://raphaeljs.com/">Raphaël</a>.
+        </p>
+        <p>
+          In October 2011 I joined <a href="http://www.uxebu.com/">uxebu</a>, a start-up that lets me work with cutting edge tools, technologies and APIs. I became a JavaScript expert, core contributor of a fantastic graphics library, called <a href="http://bonsaijs.org/">BonsaiJS</a> and a <a href="http://www.pixelplant.com/">Flash whisperer</a>. They support and encourage me attending and speaking at <a href="http://lanyrd.com/profile/basecode/">conferences</a>.
+        </p>
+        <h3>I'm an iOS Developer</h3>
+        <p>
+          In 2008 I decided to go more low-level and started learning C and <a href="https://en.wikipedia.org/wiki/Objective-C">Obj-C</a>. Together with <a href="http://www.madamelerenoir.com/">MadameLeRenoir</a>, we created the following <a href="http://itunes.com/madamelerenoir">list</a> of iOS apps so far. Among other APIs I got familiar with <a href="http://developer.apple.com/library/ios/#documentation/CoreGraphics/Reference/CoreGraphics_Framework/_index.html">Core Graphics</a> and <a href="https://developer.apple.com/library/mac/#documentation/Cocoa/Conceptual/CoreAnimation_guide/Introduction/Introduction.html">Core Animation</a>.
+        </p>
+        <h3>I'm a TDD coach</h3>
+        <p>
+          I had the chance to learn from one of the best and since then consider untested code as worthless in the log-term. Writing tests makes you sleep better and completely removes those moments of "I'm afraid of touching the code". As a side effect following the rules of TDD will heavily influence the way you code in a good sense.  Since 2012 I offer TDD coaching as part of my job at Uxebu.
+        </p>
+      </article>
     </div>
 
     <footer>
