Add post: GPU Composited CSS - Refresh Grillfest Muc

--- a/index.html
+++ b/index.html
@@ -6,6 +6,16 @@
 
     <link rel="stylesheet" type="text/css" href="stylesheet/stylesheet.css" media="screen" />
 
+    <style type="text/css">
+    body {
+      color: #eaeaea;
+    }
+    h3 {
+      margin-left:-0.3em;
+      color: #FCC240;
+    }
+    </style>
+
     <title>basecode.de</title>
   </head>
 
@@ -26,7 +36,7 @@
     <div class="container h-entry">
       <h3>Article</h3>
       <ul>
-        <li><a href="./article/hardware-accelerated-drop-shadow-animation-with-css.html">Hardware accelerated drop-shadow animation with CSS</a></li>
+        <li><a href="./article/gpu-composited-css-refresh-grillfest-munich.html">GPU Composited CSS (Refresh Grillfest Munich edition)</a></li>
       </ul>
       <span class="p-name">About me</span>
       <a rel="author" class="p-author h-card" href="http://basecode.de/"></a>
