--- a/index.html
+++ b/index.html
@@ -52,7 +52,10 @@
         </p>
         <h3>I'm an iOS Developer</h3>
         <p>
-          In 2008 I decided to go more low-level and started learning C and <a href="https://en.wikipedia.org/wiki/Objective-C">Obj-C</a>. Together with <a href="http://www.madamelerenoir.com/">MadameLeRenoir</a>, we created the following <a href="http://itunes.com/madamelerenoir">list</a> of iOS apps so far. Among other APIs I got familiar with <a href="http://developer.apple.com/library/ios/#documentation/CoreGraphics/Reference/CoreGraphics_Framework/_index.html">Core Graphics</a> and <a href="https://developer.apple.com/library/mac/#documentation/Cocoa/Conceptual/CoreAnimation_guide/Introduction/Introduction.html">Core Animation</a>.
+          In 2008 I decided to go more low-level and started learning C and <a href="https://en.wikipedia.org/wiki/Objective-C">Obj-C</a>.
+          Together with my wife Valerie Reiss, Founder and Creative Director of <a href="http://www.madamelerenoir.com/">MadameLeRenoir</a>, I created <a href="http://itunes.com/madamelerenoir">12 iOS Apps</a>
+          Among other APIs I got familiar with <a href="http://developer.apple.com/library/ios/#documentation/CoreGraphics/Reference/CoreGraphics_Framework/_index.html">Core Graphics</a> and <a href="https://developer.apple.com/library/mac/#documentation/Cocoa/Conceptual/CoreAnimation_guide/Introduction/Introduction.html">Core Animation</a>.
+          Since 2014 I rewrote some of our Apps using <a href="https://developer.apple.com/swift/">Swift</a>.
         </p>
         <h3>I'm a TDD coach</h3>
         <p>
