--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <header>
       <div class="container">
         <h1>
-          <a href="">~basecode</a>
+          <a href="">basecode</a>
           <span>
             <a href="https://www.github.com/basecode" rel="me">Github</a>,
             <a href="https://www.twitter.com/basecode" rel="me">Twitter</a>
