--- a/article/gpu-composited-css-refresh-grillfest-munich.html
+++ b/article/gpu-composited-css-refresh-grillfest-munich.html
@@ -3,9 +3,7 @@
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-
     <link rel="stylesheet" type="text/css" href="../stylesheet/stylesheet.css" media="screen" />
-
     <style type="text/css">
     .illustration-paint-selection a {
       background-color: #222;
@@ -14,7 +12,6 @@
       border-radius: 2px;
     }
     </style>
-
     <title>GPU Composited CSS</title>
   </head>
 
@@ -23,7 +20,7 @@
     <header>
       <div class="container">
         <h1>
-          <a href="../index.html">~basecode</a>
+          <a href="../index.html">basecode</a>
           <span>
             <a href="http://www.github.com/basecode">Github</a>,
             <a href="http://www.twitter.com/basecode">Twitter</a>
