--- a/index.html
+++ b/index.html
@@ -29,10 +29,18 @@
       <article class="e-content">
         <h3>I'm a Web Developer</h3>
         <p>
-          Having grown up with the Web 1.0 I used to work with PHP, SQL and JavaScript in the early days. I joined a small start-up in 2001 which was mainly focused on collecting financial data. I was responsible for visualizing that data in terms of creating self-statement charts, factsheets and simple tools whereby I learned a lot about <a href="http://en.wikipedia.org/wiki/XSL_Formatting_Objects">XSL-FO</a>, <a href="https://en.wikipedia.org/wiki/Scalable_Vector_Graphics">SVG</a> and <a href="http://raphaeljs.com/">Raphaël</a>.
+          Having grown up with the Web 1.0 I used to work with PHP, SQL and JavaScript in the early days.
+          I joined a small start-up in 2001 which was mainly focused on collecting financial data.
+          I was responsible for visualizing that data in terms of creating self-statement charts,
+          factsheets and simple tools whereby I learned a lot about <a href="http://en.wikipedia.org/wiki/XSL_Formatting_Objects">XSL-FO</a>,
+          <a href="https://en.wikipedia.org/wiki/Scalable_Vector_Graphics">SVG</a> and <a href="http://raphaeljs.com/">Raphaël</a>.
         </p>
         <p>
-          In October 2011 I joined <a href="http://www.uxebu.com/">uxebu</a>, a start-up that lets me work with cutting edge tools, technologies and APIs. I became a JavaScript expert, core contributor of a fantastic graphics library, called <a href="http://bonsaijs.org/">BonsaiJS</a> and a <a href="http://www.pixelplant.com/">Flash whisperer</a>. They support and encourage me attending and speaking at <a href="http://lanyrd.com/profile/basecode/">conferences</a>.
+          In October 2011 I joined <a href="http://www.uxebu.com/">uxebu</a>, a start-up that lets me work with cutting edge tools,
+          technologies and APIs. I became a JavaScript expert, core contributor of a fantastic graphics library,
+          called <a href="http://bonsaijs.org/">BonsaiJS</a> and a <a href="http://www.pixelplant.com/">Flash whisperer</a>.
+          They support and encourage me attending and speaking at <a href="http://lanyrd.com/profile/basecode/">conferences</a>
+          and <a href="http://devchat.tv/js-jabber/094-jsj-bonsaijs-with-tobi-reiss">Podcasts</a>.
         </p>
         <h3>I'm an iOS Developer</h3>
         <p>
