--- a/resume.html
+++ b/resume.html
@@ -3,11 +3,17 @@
   <head>
     <meta charset='utf-8'>
     <title>Tobias Reiss</title>
+    <script src="https://gist.github.com/basecode/e5b9bc31f18c21b6a48d.js"></script>
+    <style type="css">
+      body {
+        margin: 2em;
+      } 
+      .gist .gist-file {
+        border: 0;
+      }
+    </style>
   </head>
 
-  <body>
+  <body></body>
 
-    <script src="https://gist.github.com/basecode/e5b9bc31f18c21b6a48d.js"></script>
-
-  </body>
 </html>
