--- a/index.html
+++ b/index.html
@@ -53,8 +53,9 @@
         <p>
           I had the chance to learn from one of the best and since then consider untested code as worthless in the log-term. Writing tests makes you sleep better and completely removes those moments of "I'm afraid of touching the code". As a side effect following the rules of TDD will heavily influence the way you code in a good sense.  Since 2012 I offer TDD coaching as part of my job at Uxebu.
         </p>
-        <h3>Article</h3>
+        <h3>Articles</h3>
         <ul>
+          <li><a href="https://medium.com/@basecode/test-public-api-not-implementation-details-3d563af5f71">Test public API, not implementation details</a></li>
           <li><a href="./article/gpu-composited-css-refresh-grillfest-munich.html">GPU Composited CSS (Refresh Grillfest Munich edition)</a></li>
         </ul>
       </article>
