--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         </p>
         <h3>I'm a TDD coach</h3>
         <p>
-          I had the chance to learn from one of the best and since then consider untested code as worthless in the log-term. Writing tests makes you sleep better and completely removes those moments of "I'm afraid of touching the code". As a side effect following the rules of TDD will heavily influence the way you code in a good sense.  Since 2012 I offer TDD coaching as part of my job at Uxebu.
+          I had the chance to participate an exclusive 3-day Workshop with <a href="http://www.jbrains.ca">J. B. Rainsberger</a> (Thanks @uxebu!) and since then consider untested code as worthless in the long-term. Writing tests makes you sleep better and completely removes those moments of "I'm afraid of touching the code". As a side effect following the rules of TDD will heavily influence the way you code in a good sense.  Since 2012 I offer TDD coaching.
         </p>
         <h3>Articles</h3>
         <ul>
