--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
           <span>
             <a href="https://www.github.com/basecode" rel="me">Github</a>,
             <a href="https://www.twitter.com/basecode" rel="me">Twitter</a>
+            <a href="http://lanyrd.com/profile/basecode/" rel="me">Lanyrd (Conferences)</a>
           </span>
         </h1>
       </div>
@@ -36,11 +37,20 @@
           <a href="https://en.wikipedia.org/wiki/Scalable_Vector_Graphics">SVG</a> and <a href="http://raphaeljs.com/">Raphaël</a>.
         </p>
         <p>
-          In October 2011 I joined <a href="http://www.uxebu.com/">uxebu</a>, a start-up that lets me work with cutting edge tools,
-          technologies and APIs. I became a JavaScript expert, core contributor of a fantastic graphics library,
-          called <a href="http://bonsaijs.org/">BonsaiJS</a> and a <a href="http://www.pixelplant.com/">Flash whisperer</a>.
+          In October 2011 I joined <a href="http://www.uxebu.com/">uxebu</a>, a start-up that let me work with cutting edge tools,
+          Web technologies and APIs. I became a <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript">JavaScript expert</a>, core contributor of a fantastic graphics library,
+          called <a href="http://bonsaijs.org/">BonsaiJS</a> and a <a href="https://www.youtube.com/watch?v=wqFPTdx09OY">Flash whisperer</a>.
           They support and encourage me attending and speaking at <a href="http://lanyrd.com/profile/basecode/">conferences</a>
           and <a href="http://devchat.tv/js-jabber/094-jsj-bonsaijs-with-tobi-reiss">Podcasts</a>.
+        </p>
+        <p>
+          In October 2015 I joined <a href="http://www.adobe.com/">Adobe Systems</a>. I contributed Java, Objective-C and JavaScript
+          code to the next major release of
+          <a href="http://www.adobe.com/ie/marketing-cloud/enterprise-content-management.html">Adobe Experience Manager</a>.
+          I helped Adobe to develop <a href="https://video.tv.adobe.com/v/5000">AEM Screens</a>, an innovative project which
+          brings interactive and digital content to physical in-store or in-venue screens.
+          I taught teams Test-Driven Development with JavaScript. I passed several internal exams and received certificates
+          in Security, AEM Developer and AEM Architect.
         </p>
         <h3>I'm an iOS Developer</h3>
         <p>
