--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
           <a href="">basecode</a>
           <span>
             <a href="https://www.github.com/basecode" rel="me">Github</a>,
-            <a href="https://www.twitter.com/basecode" rel="me">Twitter</a>
+            <a href="https://www.twitter.com/basecode" rel="me">Twitter</a>,
             <a href="http://lanyrd.com/profile/basecode/" rel="me">Lanyrd (Conferences)</a>
           </span>
         </h1>
