Optimise presentation of links

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <div class="container">
         <h1>
           <a href="">basecode</a>
-          <span>
+          <span class="links">
             <a href="https://www.github.com/basecode" rel="me">Github</a>,
             <a href="https://www.twitter.com/basecode" rel="me">Twitter</a>,
             <a href="http://lanyrd.com/profile/basecode/" rel="me">Lanyrd (Conferences)</a>
