--- a/index.html
+++ b/index.html
@@ -63,6 +63,10 @@
         <p>
           I had the chance to participate an exclusive 3-day Workshop with <a href="http://www.jbrains.ca">J. B. Rainsberger</a> (Thanks @uxebu!) and since then consider untested code as worthless in the long-term. Writing tests makes you sleep better and completely removes those moments of "I'm afraid of touching the code". As a side effect following the rules of TDD will heavily influence the way you code in a good sense.  Since 2012 I offer TDD coaching.
         </p>
+        <h3>I'm a certified ScrumMaster</h3>
+        <p>
+          CSM Certified ScrumMaster, License Number: 000522106, Certification URL: <a href="https://www.scrumalliance.org/community/profile/treiss">https://www.scrumalliance.org/community/profile/treiss</a>.
+        </p>
         <h3>Articles</h3>
         <ul>
           <li><a href="https://medium.com/@basecode/test-public-api-not-implementation-details-3d563af5f71">Test public API, not implementation details</a></li>
